[build-system]
requires = [
    "setuptools>-42",
    "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | \.pytest_cache
  )/
)
'''