[metadata]
name = linuxforhealth-x12
version = attr: x12.__version__
description = LinuxForHealth x12 streams ASC 5010 X12 health care transactions into Pydantic Models for a pleasant pythonic parsing experience! Integration options include REST endpoints, CLI (command line), or direct access using the Python SDK
long_description: file: README.md
long_description_content_type = text/markdown
license: Apache 2.0
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Healthcare Industry
    Intended Audience :: Developers

[options]
include_package_data = True
install_requires =
    pydantic >= 1.8
    python-dotenv
packages=find:
package_dir=
    =src
python_requires = >= 3.8
zip_safe = False

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    cli = x12.cli:main
    black = black:patched_main

[options.extras_require]
api = fastapi; uvicorn[standard]
dev = black; pre-commit; pytest