[metadata]
name = linuxforhealth-x12
version = attr: linuxforhealth.x12.__version__
description = LinuxForHealth x12 streams ASC 5010 X12 health care transactions into Pydantic Models for a pleasant pythonic parsing experience! Integration options include REST endpoints, CLI (command line), or direct access using the Python SDK
long_description: file: README.md
long_description_content_type = text/markdown
license: Apache 2.0
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Healthcare Industry
    Intended Audience :: Developers

[options]
install_requires =
    pydantic >= 1.9
    python-dotenv >=  0.19.0
package_dir=
    =src
packages=find_namespace:
python_requires = >= 3.8
zip_safe = False

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    lfhx12 = linuxforhealth.x12.cli:main
    black = black:patched_main
    lfhx12-api = linuxforhealth.x12.api:run_server

[options.extras_require]
api = fastapi>=0.78.0; uvicorn[standard]>=0.17.0; requests>=2.27.0
dev = black>=22.3.0; pre-commit>=2.14.1;pytest>=7.1.0